# secure-ai-tooling

./: .gitignore  .mise.toml  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new_control.yml  new_risk.yml
.github/workflows/: persona-pages.yml  validate-issue-templates.yml  validate_mermaid.yml  validate_python.yml  validate_tables.yml  validate_workflows.yml  validation.yml
docs/adr/: 003-devcontainer-mise-architecture.md  005-pre-commit-framework.md  009-persona-pages-workflow-topology.md  011-persona-site-data-schema-contract.md  012-static-spa-architecture.md  013-site-precommit-hooks.md  025-testing-strategy.md
risk-map/docs/: artifact-integrity-maturity-pattern.md  best-practices.md  ci-cd.md  controls-graph.md  controls-graph.mermaid  controls-to-risk-graph.md  controls-to-risk-graph.mermaid  graph-customization.md  guide-components.md  guide-controls.md  guide-frameworks.md  guide-metadata.md  guide-personas.md  guide-risks.md  persona-pages.md  setup.md  troubleshooting.md  validation.md  writing-documentation.md  zero-trust-tool-invocation-standard.md
risk-map/schemas/: controls.schema.json  risks.schema.json
risk-map/tables/: components-full.md  controls-full.md  controls-summary.md  controls-xref-risks.md  personas-full.md  personas-summary.md  personas-xref-controls.md  personas-xref-risks.md  risks-full.md
risk-map/yaml/: risks.yaml  (+5 more)
scripts/: README.md  generate_issue_templates.py
site/: index.html
(+31 files in other folders)
