[project]
name = "secure-ai-tooling"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "check-jsonschema==0.37.2",
    "jsonschema==4.26.0",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "PyYAML==6.0.3",
    "ruff==0.15.12",
    "pandas==3.0.3",
    "tabulate==0.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["scripts/hooks"]

[tool.coverage.run]
omit = [
    "*/test_*.py", # Exclude files matching 'test_*.py' pattern anywhere
    "*/conftest.py", # Exclude files matching 'test_*.py' pattern anywhere
]
